# flappyvala

./: .gitlab-ci.yml  AnimatedSprite.vala  Background.vala  Flappy.vala  Game.vala  GameOver.vala  Menu.vala  README.md  Ready.vala  Scene.vala  Score.vala  gresource.xml  main.vala  meson.build
data/: Flappy-vala.desktop  meson.build
lib/: Animate.vala  Circle.vala  Drawable.vala  Sprite.vala  Texture.vala  Utils.vala  Window.vala  burger.vala  meson.build
src/: Background.vala  Personnage.vala  SDL2_image.vapi  Scene.vala  Score.vala  Tuyau.vala  main.vala  meson.build  sdl2.vapi
subprojects/: burger.wrap
vapi/: csfml-graphics.vapi  csfml-system.vapi
