Image_bmp = [
	'back.bmp',
	'grass.bmp',
	'tuyauC.bmp',
	'tuyau.bmp',
	'titre.bmp',
	'retry.bmp',
	'gameover.bmp',
	'flappy1.bmp',
	'flappy2.bmp',
	'flappy3.bmp',
	'building.bmp',
	'font.bmp'
]
install_data(Image_bmp, install_dir : get_option('datadir') / 'flappy')

install_data('Flappy-vala.desktop', install_dir : get_option('datadir') / 'applications/')

install_data('flappy-icon.png', install_dir : get_option('datadir') / 'icons')
